# SDC_final

./: .gitignore  README.md  checkFasterWhisper.py  conversation_pipeline.py  hello.py  how-to-does.txt  newhellopy  predict.py  sensor_pipeline_prompt.md  testingfile2.py  testinginfile1.py  testingsmallermodel.py
Chat-bot/Kokoro-FastAPI/: pyproject.toml
Chat-bot/chat_bot/: new_conv_open.py
IOT/: NeuroFocus.ino
Kokoro-FastAPI/: start-cpu.ps1  start-gpu.ps1
Kokoro-FastAPI/files/: gg.py
ai_model/: README.md  config.py  data_manager.py  first_round_from_core_set.py  pyproject.toml  requirements.txt  retrain_trigger.py  train_utils.py
ai_model/data/: personal_history.csv
ai_model/federated/: client.py  server_app.py
ai_model/logs/: retrain_log.csv
ai_model/model/saved/: global_model.pt  scaler.pkl
ai_model/sensor_pipeline/: __init__.py  buffering.py
ai_model/src/features/: window_features.py
ai_model/src/inference/: replay_test.py
ai_model/src/training/: train_model.py
project/: run_sensor_pipeline_demo.py  run_sensor_pipeline_simulation.py  run_sensor_pipeline_smoke.py  test_lock_file.py  test_retrain_blocks.py  test_retrain_guards.py
project/data/: core-set.csv  feedback_set.csv  main_dataset.csv
project/federated/: server.py
project/model/: stress_mlp.py
project/sensor_pipeline/: features.py  model_hook.py  pipeline.py  storage.py
src/inference/: replay_test.py
src/training/: train_model.py
webapp/: README.md  topic.md
webapp/backend/: .env.example  .gitignore  README.md  backend-report.md  check_users.py  requirements.txt
(+85 files in other folders)
